Agregamos funcionalidad al dar clic al elemento button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style/estilo.css">
+    <script src="/script/script.js"></script>
 </head>
 <body>
     <h1>Temas para la clase numero 20</h1>
-    <button>Clic para la magia</button>
+    <button onclic="mostrarMensaje()">Clic para la magia</button>
 </body>
 </html>
