Agregamos codigo para resolver funcionalidad del boton, el evento no era el correcto

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Temas para la clase numero 20</h1>
-    <button onclic="mostrarMensaje()">Clic para la magia</button>
+    <button onclick="mostrarMensaje()">Clic para la magia</button>
 </body>
 </html>
