--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@
     <h1>Temas para la clase numero 20</h1>
     <button onclick="mostrarMensaje()">Clic para la magia</button>
 </body>
-</html>
+</html> a
